--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Creatore di codice fiscale</title>
   </head>
   <body>
-    <h1>Scopri qual è il tuo codice fiscale</h1>
+    <h1 class="text-center">Scopri qual è il tuo codice fiscale</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
