--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
   </head>
   <body>
     <h1 align="center">Calcolatrice</h1>
-    <button type="button1">1</button>
-    <button type="button2">2</button>
-    <button type="button3">3</button>
-    <button type="button4">4</button>
-    <button type="button5">5</button>
-    <button type="button6">6</button>
-    <button type="button7">7</button>
-    <button type="button8">8</button>
-    <button type="button9">9</button>
-    <button type="button0">0</button>
+    <input id="button1" type="button" value="1">
+    <input id="button2" type="button" value="2">
+    <input id="button3" type="button" value="3">
+    <input id="button4" type="button" value="4">
+    <input id="button5" type="button" value="5">
+    <input id="button6" type="button" value="6">
+    <input id="button7" type="button" value="7">
+    <input id="button8" type="button" value="8">
+    <input id="button9" type="button" value="9">
+    <input id="button0" type="button" value="0">
+    <input id="buttonSum" type="button" value="+">
+    <input id="buttonDiff" type="button" value="-">
+    <input id="buttonPer" type="button" value="X">
+    <input id="buttonDiv" type="button" value=":">
+    <input id="buttonCalc" type="button" value="=">
+    <input id="buttonDel" type="button" value="Del">
     <p id="operation">0</p>
-
+    <p id="result">0</p>
 
 
 
