--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <input id="buttonDel" type="button" value="Del">
     <p id="operation">0</p>
     <p id="result">0</p>
+    <p id="demo"></p>
 
 
 
