aggiunti nuovi controlli per inserimento e modifica onclick

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container operation">
             <div class="row">
                 <div class="col-sm">
-                    <p id="operation">0</p>
+                    <p id="operation">6*-2</p>
                 </div>
             </div>
             <div class="row">
@@ -33,71 +33,71 @@
         <div class="container" align="center">
             <div class="row">
                 <div class="col-sm tasto">
-                    <input type="submit" id="button7" class="btn number" value="7"></input>
+                    <input type="submit" id="button7" class="btn number" value="7" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="button8" class="btn number" value="8"></input>
+                    <input type="submit" id="button8" class="btn number" value="8" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="button9" class="btn number" value="9"></input>
+                    <input type="submit" id="button9" class="btn number" value="9" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="buttonDel" class="btn sign" value="C"></input>
+                    <input type="submit" id="buttonDel" class="btn sign" value="C" onclick="clickC()"></input>
                 </div>
             </div>
         </div> 
         <div class="container" align="center">
             <div class="row">
                 <div class="col-sm tasto">
-                    <input type="submit" id="button4" class="btn number" value="4"></input>
+                    <input type="submit" id="button4" class="btn number" value="4" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="button5" class="btn number" value="5"></input>
+                    <input type="submit" id="button5" class="btn number" value="5" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="button6" class="btn number" value="6"></input>
+                    <input type="submit" id="button6" class="btn number" value="6" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="buttonPer" class="btn sign" value="*"></input>
+                    <input type="submit" id="buttonPer" class="btn sign" value="x" onclick="clickPerDiv(this.value)"></input>
                 </div>
             </div>
         </div>
         <div class="container" align="center">
             <div class="row">
                 <div class="col-sm tasto">
-                    <input type="submit" id="button1" class="btn number" value="1"></input>
+                    <input type="submit" id="button1" class="btn number" value="1" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="button2" class="btn number" value="2"></input>
+                    <input type="submit" id="button2" class="btn number" value="2" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="button3" class="btn number" value="3"></input>
+                    <input type="submit" id="button3" class="btn number" value="3" onclick="clickNumber(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="buttonDiv" class="btn sign" value="/"></input>
+                    <input type="submit" id="buttonDiv" class="btn sign" value="/" onclick="clickPerDiv(this.value)"></input>
                 </div>
             </div>
         </div>  
         <div class="container" align="center">
             <div class="row">
                 <div class="col-sm tasto">
-                    <input type="submit" id="button0" class="btn number" value="0"></input>
+                    <input type="submit" id="button0" class="btn number" value="0" onclick="click0(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="buttonDot" class="btn number" value="."></input>
+                    <input type="submit" id="buttonDot" class="btn number" value="." onclick="clickDot()"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="buttonDiff" class="btn sign" value="-"></input>
+                    <input type="submit" id="buttonDiff" class="btn sign" value="-" onclick="clickSumDiff(this.value)"></input>
                 </div>
                 <div class="col-sm tasto">
-                    <input type="submit" id="buttonSum" class="btn sign" value="+"></input>
+                    <input type="submit" id="buttonSum" class="btn sign" value="+" onclick="clickSumDiff(this.value)"></input>
                 </div>
             </div>
         </div>
         <div class="container" align="center">
             <div class="row">
                 <div class="col-sm tasto">
-                    <input type="submit" id="buttonCalc" class="btn calc" value="="></input>
+                    <input type="submit" id="buttonCalc" class="btn calc" value="=" onclick="clickCalc()"></input>
                 </div>
             </div>
         </div>    
