mi sono ricordato stanotte di aggiungere una condizione alla radice

--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
     <div class="jumbotron">
       <h1 class="display-4">Goodmorning y'all!</h1>
       <p class="lead">Avete problemi con delle operazioni? I calcoli non sono il vostro forte e non amate la matematica? Rilassatevi perché c'è <strong>La Calcolatrice Traditrice</strong>! Clicca il bottone sotto e risolvi i tuoi problemi!</p>
-      <a class="btn btn-dark btn-lg" href="./index.html" role="button">Clicca qui!</a>
+      <div align="center"><a class="btn btn-dark btn-lg" href="./index.html" role="button">Clicca qui!</a></div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
