--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="./homepage.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" onclick="myFunction()">Do you want a best one?</a>
+                        <a class="nav-link" href="#" onclick="myFunction()">Do you want a better one?</a>
                     </li>
                 </ul>
             </div>
